# nancryption

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nancryption/: __init__.py
tests/: test_nancryption.py
